[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/spritesheets/some-programmer.png" type="Texture" id=1]
[ext_resource path="res://entities/player/Programmer.gd" type="Script" id=2]
[ext_resource path="res://entities/player/Arm.gd" type="Script" id=3]
[ext_resource path="res://entities/player/PlayerProyectile.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/jumpsound.wav" type="AudioStream" id=5]
[ext_resource path="res://entities/player/ProgrammerSounds.gd" type="Script" id=6]
[ext_resource path="res://entities/player/ProgrammerStateMachine.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.92305, 28.5 )

[sub_resource type="Animation" id=2]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 20.0, 30.0, 40.0, 50.0, 60.0, 70.0, 80.0, 85.0, 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 10 ), Vector2( 0, 20 ), Vector2( 0, 30 ), Vector2( 0, 35 ) ]
}

[sub_resource type="Animation" id=3]
length = 2.0

[sub_resource type="Animation" id=4]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 4, 4 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("ProgrammerSounds")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=7]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 1.1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Programmer" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 10.2052 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )
vframes = 3
hframes = 6
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 18 )
shape = SubResource( 1 )

[node name="CameraProgramer" type="Camera2D" parent="."]
offset = Vector2( 90, -40 )
current = true

[node name="Arm" type="Sprite" parent="."]
script = ExtResource( 3 )
projectile_scene = ExtResource( 4 )

[node name="FirePosition" type="Position2D" parent="Arm"]
position = Vector2( -0.143185, -19.0698 )

[node name="FireTimer" type="Timer" parent="Arm"]
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.117984, 0.0589943 )
scale = Vector2( 0.480869, 2.66948 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -15.1838, -0.186707 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 2 )
anims/hit = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/walk = SubResource( 6 )

[node name="ProgrammerSounds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "Effects"
script = ExtResource( 6 )

[node name="ProgrammerStateMachine" type="Node" parent="."]
script = ExtResource( 7 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 7 )
[connection signal="timeout" from="Arm/FireTimer" to="Arm" method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
